# fluent-ai

./: .gitignore  AUDIO_IMPROVEMENTS.md  BLACKHOLE_SETUP.md  CLAUDE.md  INTERNAL_README.md  README.md  README_DATABASE.md  SILENCE_DETECTION.md  audio_capture_thread.py  debug_whisper.py  demo_silence_detection.py  gui_app.py  init_database.py  live_monitor.py  live_monitor_with_db.py  main.py  main_whisper.py  production_test_guide.md  pyproject.toml  requirements-rt.txt  requirements.txt  silence_detector.py  test_blackhole_audio.py  test_cli.py  test_model_loader.py  test_queue_flow.py  translation_logs.duckdb  view_database.py
.github/workflows/: ci.yml
bench/: baseline.py  latency.py
conf/: languages.yaml
docs/: DEMO_RECORDING.md  TASK_12_COMPLETION.md  USAGE.md  architecture.md  audio-routing.md  database-logging.md  design.md  roadmap.md
examples/: blackhole_loopback.py  check_cli.py  check_queue_flow.py  test_vad_probe.py  vad_probe.py
fluentai/: __init__.py  app_controller.py  asr_translation_synthesis_thread.py  audio_setup.py  audio_utils.py  blackhole_reproduction_thread.py  database_logger.py  example_usage.py  meeting_detector.py  meeting_pipeline.py  model_loader.py  streaming_asr.py  transcription.py  tts_engine.py
fluentai/cli/: README.md  __init__.py  __main__.py  translate_rt.py
fluentai/ui/: __init__.py  meeting_overlay.py  theme.py
scripts/: check_blackhole.zsh  ci_demo.py  demo_recording.py
test_data/: benchmark_results.json  silence_detection_expected.json
tests/: conftest.py  test_app_controller.py  test_asr_roundtrip.py  test_audio_setup.py  test_audio_utils.py  test_benchmarks.py  test_lazy_model_loader.py  test_loader_metadata.py  test_meeting_detector.py  test_meeting_pipeline.py  test_silence_detection.py  test_streaming_asr.py  test_transcription.py  test_tts_engine.py
